// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageCookies when CookieYes loads renders button 1`] = `
<button
  className="button-link cky-banner-element"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  Manage Cookies
</button>
`;

exports[`ManageCookies when CookieYes loads renders button in wrapper 1`] = `
<div>
  <button
    className="button-link cky-banner-element"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#026AA1",
        "--link-hover-color": "#005481",
      }
    }
  >
    Manage Cookies
  </button>
</div>
`;

exports[`ManageCookies when CookieYes loads renders button with className 1`] = `
<button
  className="button-link cky-banner-element test"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  Manage Cookies
</button>
`;

exports[`ManageCookies when CookieYes loads renders button with content and correct class 1`] = `
<button
  className="button-link cky-banner-element"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  some content
</button>
`;

exports[`ManageCookies with CookieYes already loaded renders button 1`] = `
<button
  className="button-link cky-banner-element"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  Manage Cookies
</button>
`;

exports[`ManageCookies with CookieYes already loaded renders button in wrapper 1`] = `
<div>
  <button
    className="button-link cky-banner-element"
    onClick={[Function]}
    style={
      Object {
        "--link-color": "#026AA1",
        "--link-hover-color": "#005481",
      }
    }
  >
    Manage Cookies
  </button>
</div>
`;

exports[`ManageCookies with CookieYes already loaded renders button with content and correct class 1`] = `
<button
  className="button-link cky-banner-element"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#026AA1",
      "--link-hover-color": "#005481",
    }
  }
>
  some content
</button>
`;

exports[`ManageCookies without cookieYes renders no button, so the wrapper is not called 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": ".cky-btn-revisit { display: none; }",
    }
  }
/>
`;

exports[`ManageCookies without cookieYes renders the style rule inline, matching what the server renders 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": ".cky-btn-revisit { display: none; }",
    }
  }
/>
`;
